2014-06-24  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Add header checks for selinux and apparmor (LP: #1333182).
	* procenv.spec.in: Added 'libselinux-devel' to BuildRequires.
	* src/Makefile.am: Use $(top_builddir) and $(subdir) rather than
	  $(abs_builddir) since the RHEL5 / Centos 5 version of automake don't
	  define the latter.
	* src/procenv.c:
	  - Fix building on RHEL5 / Centos 5 by guarding undefined personality
	    symbols (LP: #1333194).
	  - Guard code based on CPU_ALLOC(3) availability.
	  - Guard capabilities, SELinux and AppArmor code.
	  - show_numa_memory(): Use entry() rather than show(), the latter of
	    which could have cause invalid formatted output if the NUMA policy
	    could not be queried.
	  - show_sizeof(): Add missing typedefs from stdint.h.
	* src/procenv.h: SELinux and capability guards.
	* src/tests/check_all_args.in:
	  - Don't die if JSON or XML checker are unavailable - just run
	    what tests are possible.
	  - Test using C locale and current (if different).

2014-06-09  James Hunt  <james.hunt@ubuntu.com>

	* procenv.spec.in: Fix for spec file on RHEL - thanks Dave Love
	  (LP: #1327594).

2014-06-07  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: sysconf and confstr cleanups.
	* src/procenv.h:
	  - Removed now unecessary macros.
	  - Bumped PROCENV_FORMAT_VERSION.

2014-06-04  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_pathconfs(): Guard all defines.
	  - show_confstrs(): Guard all defines.
	* src/procenv.h: Added _show_confstr() macro to allow name to be
	  specified.

2014-06-03  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Guard extended interfaces flags (IFF_*) since as of
	    kernel 3.15 they have been removed (LP: #1324256).
	  - show_all_groups(): Fixed possible memory leak - thanks Coverity.
	  - show_uname(): Added asserts.
	* src/tests/check_all_args.in: Temporary work-around for lp:1325494.

2014-03-27  James Hunt  <james.hunt@ubuntu.com>
