@@ -1,3 +1,11 @@
+2014-06-25  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c:
+	  - get_mtu(): Ensure unsigned long used for ioctl(2) request parameter
+	    (caught by FreeBSD's "WARNING ioctl sign-extension ioctl" console
+	    message).
+	  - get_mac_address(): As above.
+
 2014-06-24  James Hunt  <james.hunt@ubuntu.com>
 
 	* configure.ac: Add header checks for selinux and apparmor (LP: #1333182).
